refactor: replace get(size-1) with getLast